# raytracing

./: CMakeLists.txt  README.org
src/: light.hpp  main.cpp  mesh.h  ray.h  vec3.cpp  vec3.cpp~  vec3.h
